solucionado warning render y bug de alignment en css

--- a/webapp/src/components/sidebar/Filtro/Filtro.css
+++ b/webapp/src/components/sidebar/Filtro/Filtro.css
@@ -60,7 +60,6 @@
     padding: 0.75em;
     background-color: #0099CC;
     color: white;
-    alignment: center;
     border-radius: 1em;
 }
 .botonFiltroTodo{
@@ -71,12 +70,10 @@
     padding: 0.75em;
     background-color: #0099CC;
     color: white;
-    alignment: center;
     border-radius: 1em;
 }
 .divBotonFiltro{
     align-content: center;
-    alignment: center;
     margin-top: 1em;
     margin-bottom: 1em;
 }
